--- a/Draw/Controller/Chat/ChatController.xib
+++ b/Draw/Controller/Chat/ChatController.xib
@@ -88,11 +88,11 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="896539482">
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
 									<double key="pointSize">17</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="340726450">
+								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
@@ -251,11 +251,11 @@
 										<int key="IBUIBaselineAdjustment">0</int>
 										<float key="IBUIMinimumFontSize">10</float>
 										<int key="IBUITextAlignment">1</int>
-										<object class="IBUIFontDescription" key="IBUIFontDescription" id="156272753">
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
 											<int key="type">1</int>
 											<double key="pointSize">14</double>
 										</object>
-										<object class="NSFont" key="IBUIFont" id="1067865303">
+										<object class="NSFont" key="IBUIFont">
 											<string key="NSName">Helvetica</string>
 											<double key="NSSize">14</double>
 											<int key="NSfFlags">16</int>
@@ -293,7 +293,7 @@
 									<object class="IBUILabel" id="1004384965">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{63, 41}, {50, 18}}</string>
+										<string key="NSFrame">{{63, 41}, {45, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="637224567"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -307,16 +307,23 @@
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
 										<float key="IBUIMinimumFontSize">10</float>
-										<reference key="IBUIFontDescription" ref="156272753"/>
-										<reference key="IBUIFont" ref="1067865303"/>
+										<object class="IBUIFontDescription" key="IBUIFontDescription" id="226459433">
+											<int key="type">1</int>
+											<double key="pointSize">12</double>
+										</object>
+										<object class="NSFont" key="IBUIFont" id="485831518">
+											<string key="NSName">Helvetica</string>
+											<double key="NSSize">12</double>
+											<int key="NSfFlags">16</int>
+										</object>
 										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 									</object>
 									<object class="IBUILabel" id="637224567">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{120.5, 41}, {71, 18}}</string>
+										<string key="NSFrame">{{115.5, 41}, {66, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSNextKeyView" ref="128773442"/>
+										<reference key="NSNextKeyView" ref="831755793"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -328,8 +335,8 @@
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
 										<float key="IBUIMinimumFontSize">10</float>
-										<reference key="IBUIFontDescription" ref="156272753"/>
-										<reference key="IBUIFont" ref="1067865303"/>
+										<reference key="IBUIFontDescription" ref="226459433"/>
+										<reference key="IBUIFont" ref="485831518"/>
 										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 									</object>
 									<object class="IBUIImageView" id="974060178">
@@ -342,10 +349,10 @@
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
-									<object class="IBUILabel" id="128773442">
+									<object class="IBUILabel" id="831755793">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{191, 38}, {29, 21}}</string>
+										<string key="NSFrame">{{181, 40}, {29, 21}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="996479208"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -359,8 +366,8 @@
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
 										<float key="IBUIMinimumFontSize">10</float>
-										<reference key="IBUIFontDescription" ref="896539482"/>
-										<reference key="IBUIFont" ref="340726450"/>
+										<reference key="IBUIFontDescription" ref="226459433"/>
+										<reference key="IBUIFont" ref="485831518"/>
 									</object>
 								</array>
 								<string key="NSFrame">{{16, 66}, {273, 69}}</string>
@@ -525,7 +532,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">levelLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="128773442"/>
+						<reference key="destination" ref="831755793"/>
 					</object>
 					<int key="connectionID">116</int>
 				</object>
@@ -618,7 +625,7 @@
 							<reference ref="923374262"/>
 							<reference ref="996479208"/>
 							<reference ref="1004384965"/>
-							<reference ref="128773442"/>
+							<reference ref="831755793"/>
 						</array>
 						<reference key="parent" ref="422428427"/>
 					</object>
@@ -701,7 +708,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">115</int>
-						<reference key="object" ref="128773442"/>
+						<reference key="object" ref="831755793"/>
 						<reference key="parent" ref="876821904"/>
 					</object>
 				</array>
