--- a/Draw/Controller/PrivateChat/ChatCell.xib
+++ b/Draw/Controller/PrivateChat/ChatCell.xib
@@ -76,7 +76,7 @@
 							<object class="IBUILabel" id="222395442">
 								<reference key="NSNextResponder" ref="288792617"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{173, 4}, {138, 21}}</string>
+								<string key="NSFrame">{{197, 4}, {116, 21}}</string>
 								<reference key="NSSuperview" ref="288792617"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="186523253"/>
@@ -98,20 +98,20 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">2</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="158671805">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="355118765">
 									<int key="type">1</int>
-									<double key="pointSize">15</double>
+									<double key="pointSize">13</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="711340555">
+								<object class="NSFont" key="IBUIFont" id="1014128237">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">15</double>
+									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUILabel" id="591128729">
 								<reference key="NSNextResponder" ref="288792617"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{173, 40}, {138, 21}}</string>
+								<string key="NSFrame">{{197, 40}, {116, 21}}</string>
 								<reference key="NSSuperview" ref="288792617"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -126,8 +126,8 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">2</int>
-								<reference key="IBUIFontDescription" ref="158671805"/>
-								<reference key="IBUIFont" ref="711340555"/>
+								<reference key="IBUIFontDescription" ref="355118765"/>
+								<reference key="IBUIFont" ref="1014128237"/>
 							</object>
 							<object class="IBUILabel" id="186523253">
 								<reference key="NSNextResponder" ref="288792617"/>
@@ -147,8 +147,16 @@
 								<reference key="IBUIHighlightedColor" ref="685771839"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="158671805"/>
-								<reference key="IBUIFont" ref="711340555"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="158671805">
+									<int key="type">1</int>
+									<double key="pointSize">15</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="34726576">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">15</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIImageView" id="746337587">
 								<reference key="NSNextResponder" ref="288792617"/>
@@ -164,6 +172,27 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">run@2x.png</string>
 								</object>
+							</object>
+							<object class="IBUILabel" id="252803361">
+								<reference key="NSNextResponder" ref="288792617"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{75, 22}, {121, 24}}</string>
+								<reference key="NSSuperview" ref="288792617"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Label</string>
+								<reference key="IBUITextColor" ref="56484678"/>
+								<reference key="IBUIHighlightedColor" ref="685771839"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<reference key="IBUIFontDescription" ref="158671805"/>
+								<reference key="IBUIFont" ref="34726576"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
 						<string key="NSFrameSize">{324, 67}</string>
@@ -235,6 +264,14 @@
 					</object>
 					<int key="connectionID">15</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">textLabel</string>
+						<reference key="source" ref="397773549"/>
+						<reference key="destination" ref="252803361"/>
+					</object>
+					<int key="connectionID">17</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -265,6 +302,7 @@
 							<reference ref="1002000371"/>
 							<reference ref="186523253"/>
 							<reference ref="746337587"/>
+							<reference ref="252803361"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -298,6 +336,11 @@
 						<reference key="object" ref="1002000371"/>
 						<reference key="parent" ref="397773549"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">16</int>
+						<reference key="object" ref="252803361"/>
+						<reference key="parent" ref="397773549"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -306,6 +349,7 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="10.CustomClassName">HJManagedImageV</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ChatCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -318,7 +362,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">15</int>
+			<int key="maxID">17</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -330,6 +374,7 @@
 						<string key="graffiti">UIImageView</string>
 						<string key="messageNumberLabel">UILabel</string>
 						<string key="nickNameLabel">UILabel</string>
+						<string key="textLabel">UILabel</string>
 						<string key="timeLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -347,6 +392,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="nickNameLabel">
 							<string key="name">nickNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="textLabel">
+							<string key="name">textLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="timeLabel">
